# video-review-os

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: config.toml
examples/artifacts/: clips.json  source.json
examples/assets/: README.md
examples/kai-mascot-overlay-demo/: README.md  config.toml
examples/kai-mascot-overlay-demo/project/: clips.json  scenes.json  source.json  visuals.json
examples/kai-mascot-overlay-demo/project/drafts/: copy.json
src/video_review_os/: __init__.py  approval.py  assembly.py  captions.py  cli.py  clip_select.py  config.py  copy.py  dashboard.py  ingest.py  media.py  posting.py  quality_gate.py  render.py  scenes.py  silence.py  storyboard.py  tagging.py  transcribe.py  utils.py  visuals.py
tests/: test_approval.py  test_assembly.py  test_assembly_captions.py  test_assembly_posting.py  test_assembly_render.py  test_captions.py  test_integration_render.py  test_posting.py  test_quality_gate.py  test_render_selection.py  test_scenes.py  test_storyboard.py  test_tagging.py  test_visuals.py
