[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-review-os"
version = "0.1.0"
description = "Local-first raw video review pipeline for clip drafts, quality gates, and human approval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Video Review OS contributors" }]
keywords = ["video", "ffmpeg", "transcription", "whisper", "creator-tools", "review-workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
whisper = ["openai-whisper>=20231117"]
faster-whisper = ["faster-whisper>=1.0.0"]
hosted = ["requests>=2.31.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
video-review-os = "video_review_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

